--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include energy_usage *.py *.md *.txt
+recursive-include energyusage *.py *.md *.txt
 
 include requirements*.*
 include README.*
